chore: java agent project tweaks